# action-dependency-insight

./: README.md  action.yml  devbox.json  knip.config.js  package-lock.json  package.json  release.config.mjs  rollup.config.mjs
.github/workflows/: depcheck.yml
src/: errors.ts  index.ts  interfaces.ts  types.ts
src/checkers/: composer.ts  fawltydeps.ts  index.ts  knip.ts  maven.ts
src/deducers/: composer-json.ts  package-json.ts  pom-xml.ts  pyproject-toml.ts
src/formatters/: console-formatter.ts  summary-formatter.ts
test/: index.test.ts  main.test.ts
test/checkers/: composer.test.ts  fawltydeps.test.ts  knip.test.ts  maven.test.ts
test/checkers/composer/: Dockerfile  composer.json  index.php
test/checkers/maven/: Dockerfile  pom.xml
test/checkers/node/: Dockerfile  index.js  package.json
test/checkers/python/: Dockerfile  main.py  pyproject.toml
test/deducers/: composer-json.test.ts  package-json.test.ts  pyproject-toml.test.ts
