[tool.poetry]
name = "sample-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1" # Used
faker = "^15.0.0"   # Unused

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
fawltydeps = "0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
